crates/fec-parser/tests/snapshots/columnar__cover_pushes_one_row.snap
---
source: crates/fec-parser/tests/columnar.rs
expression: "render(&defs, &builders, 1)"
---
0.form_type = "F3N"
0.filer_committee_id = "C00727529"
0.committee_name = "Mrvan for Congress"
0.address_street_1 = "PO Box 55"
0.address_city = "Crown Point"
0.address_state = "IN"
0.address_zip_code = "46308"
0.change_of_address = false
0.election_state = "IN"
0.election_district = "01"
0.report_code = "Q3"
0.coverage_from_date = 20270d
0.coverage_through_date = 20361d
0.treasurer_first_name = "Brett"
0.treasurer_last_name = "Bierman"
0.date_signed = 20376d
0.summary_line6a_total_contributions_column_a = 446060.94
0.summary_line6a_total_contributions_column_b = 1034222.08
0.summary_line6b_total_contribution_refunds_column_a = 155
0.summary_line6b_total_contribution_refunds_column_b = 5222
0.summary_line6c_net_contributions_column_a = 445905.94
0.summary_line6c_net_contributions_column_b = 1029000.08
0.summary_line7a_total_operating_expenditures_column_a = 154127.98
0.summary_line7a_total_operating_expenditures_column_b = 528988.37
0.summary_line7b_total_offsets_to_operating_expenditures_column_a = 0
0.summary_line7b_total_offsets_to_operating_expenditures_column_b = 35
0.summary_line7c_net_operating_expenditures_column_a = 154127.98
0.summary_line7c_net_operating_expenditures_column_b = 528953.37
0.summary_line8_cash_on_hand_close_of_period = 681179.79
0.summary_line9_debts_owed_to_committee = 0
0.summary_line10_debts_owed_by_committee = 0
0.detailed_summary_receipts_line11a_i_contributions_from_individuals_itemized_column_a = 229785.83
0.detailed_summary_receipts_line11a_i_contributions_from_individuals_itemized_column_b = 464457.08
0.detailed_summary_receipts_line11a_ii_contributions_from_individuals_unitemized_column_a = 45827.12
0.detailed_summary_receipts_line11a_ii_contributions_from_individuals_unitemized_column_b = 98052.34
0.detailed_summary_receipts_line11a_iii_contributions_from_individuals_total_column_a = 275612.95
0.detailed_summary_receipts_line11a_iii_contributions_from_individuals_total_column_b = 562509.42
0.detailed_summary_receipts_line11b_political_party_committees_column_a = 1097.99
0.detailed_summary_receipts_line11b_political_party_committees_column_b = 1562.66
0.detailed_summary_receipts_line11c_other_political_committees_pacs_column_a = 169350
0.detailed_summary_receipts_line11c_other_political_committees_pacs_column_b = 470150
0.detailed_summary_receipts_line11d_the_candidate_column_a = 0
0.detailed_summary_receipts_line11d_the_candidate_column_b = 0
0.detailed_summary_receipts_line11e_total_contributions_column_a = 446060.94
0.detailed_summary_receipts_line11e_total_contributions_column_b = 1034222.08
0.detailed_summary_receipts_line12_transfers_from_authorized_column_a = 11706.43
0.detailed_summary_receipts_line12_transfers_from_authorized_column_b = 32556.43
0.detailed_summary_receipts_line13a_loans_from_candidate_column_a = 0
0.detailed_summary_receipts_line13a_loans_from_candidate_column_b = 0
0.detailed_summary_receipts_line13b_other_loans_column_a = 0
0.detailed_summary_receipts_line13b_other_loans_column_b = 0
0.detailed_summary_receipts_line13c_total_loans_column_a = 0
0.detailed_summary_receipts_line13c_total_loans_column_b = 0
0.detailed_summary_receipts_line14_offset_to_operating_expenditures_column_a = 0
0.detailed_summary_receipts_line14_offset_to_operating_expenditures_column_b = 35
0.detailed_summary_receipts_line15_other_receipts_column_a = 8.12
0.detailed_summary_receipts_line15_other_receipts_column_b = 20.32
0.detailed_summary_receipts_line16_total_receipts_column_a = 457775.49
0.detailed_summary_receipts_line16_total_receipts_column_b = 1066833.83
0.detailed_summary_disbursements_line17_operating_expenditures_column_a = 154127.98
0.detailed_summary_disbursements_line17_operating_expenditures_column_b = 528988.37
0.detailed_summary_disbursements_line18_transfers_to_authorized_column_a = 0
0.detailed_summary_disbursements_line18_transfers_to_authorized_column_b = 0
0.detailed_summary_disbursements_line19a_candidate_loan_repayments_column_a = 0
0.detailed_summary_disbursements_line19a_candidate_loan_repayments_column_b = 0
0.detailed_summary_disbursements_line19b_other_loan_repayments_column_a = 0
0.detailed_summary_disbursements_line19b_other_loan_repayments_column_b = 0
0.detailed_summary_disbursements_line19c_total_loan_repayments_column_a = 0
0.detailed_summary_disbursements_line19c_total_loan_repayments_column_b = 0
0.detailed_summary_disbursements_line20a_refunds_to_individuals_column_a = 155
0.detailed_summary_disbursements_line20a_refunds_to_individuals_column_b = 222
0.detailed_summary_disbursements_line20b_refunds_to_party_committees_column_a = 0
0.detailed_summary_disbursements_line20b_refunds_to_party_committees_column_b = 0
0.detailed_summary_disbursements_line20c_refunds_to_other_committees_column_a = 0
0.detailed_summary_disbursements_line20c_refunds_to_other_committees_column_b = 5000
0.detailed_summary_disbursements_line20d_total_refunds_column_a = 155
0.detailed_summary_disbursements_line20d_total_refunds_column_b = 5222
0.detailed_summary_disbursements_line21_other_disbursements_column_a = 1539.72
0.detailed_summary_disbursements_line21_other_disbursements_column_b = 8614.8
0.detailed_summary_disbursements_line22_total_disbursements_column_a = 155822.7
0.detailed_summary_disbursements_line22_total_disbursements_column_b = 542825.17
0.detailed_summary_cash_summary_line23_cash_on_hand_beginning = 379227
0.detailed_summary_cash_summary_line24_total_receipts = 457775.49
0.detailed_summary_cash_summary_line25_subtotal = 837002.49
0.detailed_summary_cash_summary_line26_total_disbursements = 155822.7
0.detailed_summary_cash_summary_line27_cash_on_hand_close = 681179.79
