crates/fec-parser/tests/snapshots/columnar__schedule_a_v3.snap
---
source: crates/fec-parser/tests/columnar.rs
expression: table
---
0.form_type = "SA11A1"
0.filer_committee_id = "C00213512"
0.transaction_id = "R5197"
0.contributor_entity_type = "IND"
0.contributor_name_first_name = "Michael"
0.contributor_name_last_name = "Amir"
0.contributor_address_street_1 = "211 S. Spalding Drive, #102 N."
0.contributor_address_city = "Beverly Hills"
0.contributor_address_state = "CA"
0.contributor_address_zip_code = "90212"
0.election_code = "G2002"
0.contribution_date = 11856d
0.contribution_amount = 500
0.contribution_aggregate = 500
0.contribution_purpose_description = "Check"
0.contributor_employer = "Amir Development"
0.contributor_occupation = "Executive"
0.donor_candidate_name_first_name = ""
0.donor_candidate_name_last_name = ""
0.memo = false
1.form_type = "SA11C"
1.filer_committee_id = "C00213512"
1.transaction_id = "R5336"
1.contributor_entity_type = "PAC"
1.contributor_organization_name = "AFLAC Inc. PAC"
1.contributor_name_first_name = ""
1.contributor_name_last_name = ""
1.contributor_address_street_1 = "1932 Wynnton Road"
1.contributor_address_city = "Columbus"
1.contributor_address_state = "GA"
1.contributor_address_zip_code = "31999"
1.election_code = "G2002"
1.contribution_date = 11865d
1.contribution_amount = 1000
1.contribution_aggregate = 1000
1.contribution_purpose_description = "Check"
1.donor_committee_fec_id = "C00034157"
1.donor_candidate_name_first_name = ""
1.donor_candidate_name_last_name = ""
1.memo = false
2.form_type = "SA14"
2.filer_committee_id = "C00213512"
2.transaction_id = "R5502"
2.contributor_entity_type = "ORG"
2.contributor_organization_name = "US Airways, Inc."
2.contributor_name_first_name = ""
2.contributor_name_last_name = ""
2.contributor_address_street_1 = "2345 Crystal Drive"
2.contributor_address_city = "Arlington"
2.contributor_address_state = "VA"
2.contributor_address_zip_code = "22227"
2.election_code = "P2002"
2.contribution_date = 11789d
2.contribution_amount = 463.5
2.contribution_aggregate = 0
2.donor_candidate_name_first_name = ""
2.donor_candidate_name_last_name = ""
2.memo = true
3.form_type = "SA15"
3.filer_committee_id = "C00213512"
3.transaction_id = "R5330"
3.contributor_entity_type = "ORG"
3.contributor_organization_name = "Union Bank of California (C)"
3.contributor_name_first_name = ""
3.contributor_name_last_name = ""
3.contributor_address_street_1 = "400 California Street"
3.contributor_address_city = "San Francisco"
3.contributor_address_state = "CA"
3.contributor_address_zip_code = "94104"
3.election_code = "G2002"
3.contribution_date = 11807d
3.contribution_amount = 75.11
3.contribution_aggregate = 825.71
3.contribution_purpose_description = "Check"
3.donor_candidate_name_first_name = ""
3.donor_candidate_name_last_name = ""
3.memo = false
