crates/fec-parser/tests/snapshots/columnar__schedule_a_v5_3.snap
---
source: crates/fec-parser/tests/columnar.rs
expression: table
---
0.form_type = "SA11AI"
0.filer_committee_id = "C00213512"
0.transaction_id = "C8394"
0.contributor_entity_type = "IND"
0.contributor_name_first_name = "Shmuel"
0.contributor_name_last_name = "Arditi"
0.contributor_address_street_1 = "104 Las Uvas Ct."
0.contributor_address_city = "Los Gatos"
0.contributor_address_state = "CA"
0.contributor_address_zip_code = "95032"
0.election_code = "G2006"
0.contribution_date = 13379d
0.contribution_amount = 500
0.contribution_aggregate = 500
0.contributor_employer = "Intel"
0.contributor_occupation = "Executive"
0.donor_candidate_name_first_name = ""
0.donor_candidate_name_last_name = ""
0.memo = false
1.form_type = "SA11C"
1.filer_committee_id = "C00213512"
1.transaction_id = "C8324"
1.contributor_entity_type = "PAC"
1.contributor_organization_name = "Accenture PAC"
1.contributor_name_first_name = ""
1.contributor_name_last_name = ""
1.contributor_address_street_1 = "800 Connecticut Ave NW"
1.contributor_address_street_2 = "Ste 600"
1.contributor_address_city = "Washington"
1.contributor_address_state = "DC"
1.contributor_address_zip_code = "200062716"
1.election_code = "G2006"
1.contribution_date = 13349d
1.contribution_amount = 1000
1.contribution_aggregate = 2000
1.donor_committee_fec_id = "C00300707"
1.donor_candidate_name_first_name = ""
1.donor_candidate_name_last_name = ""
1.memo = false
2.form_type = "SA14"
2.filer_committee_id = "C00213512"
2.transaction_id = "C8507"
2.contributor_entity_type = "ORG"
2.contributor_organization_name = "Visa Check/Master Money Antritrust Settlement Fd"
2.contributor_name_first_name = ""
2.contributor_name_last_name = ""
2.contributor_address_street_1 = "The Garden City Group, Inc."
2.contributor_address_street_2 = "P.O. Box 9000"
2.contributor_address_city = "Merrick"
2.contributor_address_state = "NY"
2.contributor_address_zip_code = "11566"
2.election_code = "G2006"
2.contribution_date = 13357d
2.contribution_amount = 33.91
2.contribution_aggregate = 33.91
2.donor_candidate_name_first_name = ""
2.donor_candidate_name_last_name = ""
2.memo = false
3.form_type = "SA15"
3.filer_committee_id = "C00213512"
3.transaction_id = "C8498"
3.contributor_entity_type = "ORG"
3.contributor_organization_name = "Union Bank of California (C)"
3.contributor_name_first_name = ""
3.contributor_name_last_name = ""
3.contributor_address_street_1 = "400 California St"
3.contributor_address_city = "San Francisco"
3.contributor_address_state = "CA"
3.contributor_address_zip_code = "941041302"
3.election_code = "G2006"
3.contribution_date = 13360d
3.contribution_amount = 49.53
3.contribution_aggregate = 870.01
3.donor_candidate_name_first_name = ""
3.donor_candidate_name_last_name = ""
3.memo = false
