crates/fec-parser/tests/snapshots/columnar__schedule_a_v6_4.snap
---
source: crates/fec-parser/tests/columnar.rs
expression: table
---
0.form_type = "SA11AI"
0.filer_committee_id = "C00213512"
0.transaction_id = "C2964003"
0.contributor_entity_type = "IND"
0.contributor_name_first_name = "Stephanie"
0.contributor_name_last_name = "Evans"
0.contributor_address_street_1 = "309 3rd Street"
0.contributor_address_city = "Sausalito"
0.contributor_address_state = "CA"
0.contributor_address_zip_code = "94965"
0.election_code = "P2010"
0.contribution_date = 14699d
0.contribution_amount = 2400
0.contribution_aggregate = 2500
0.contributor_employer = "Self-Employed"
0.contributor_occupation = "Psychologist"
0.donor_candidate_name_first_name = ""
0.donor_candidate_name_last_name = ""
0.memo = false
1.form_type = "SA11AI"
1.filer_committee_id = "C00213512"
1.transaction_id = "C2821824"
1.contributor_entity_type = "IND"
1.contributor_name_first_name = "William"
1.contributor_name_last_name = "Gates"
1.contributor_name_middle_name = "H."
1.contributor_name_suffix = "III"
1.contributor_address_street_1 = "PO Box 97000"
1.contributor_address_city = "Kirkland"
1.contributor_address_state = "WA"
1.contributor_address_zip_code = "98083"
1.election_code = "P2010"
1.contribution_date = 14616d
1.contribution_amount = 1000
1.contribution_aggregate = 1000
1.contributor_employer = "Self-Employed"
1.contributor_occupation = "Entrepreneur"
1.donor_candidate_name_first_name = ""
1.donor_candidate_name_last_name = ""
1.memo = false
2.form_type = "SA11C"
2.filer_committee_id = "C00213512"
2.transaction_id = "C2921060"
2.contributor_entity_type = "PAC"
2.contributor_organization_name = "Weyerhauser Company Political Action Committee"
2.contributor_name_first_name = ""
2.contributor_name_last_name = ""
2.contributor_address_street_1 = "P.O. Box 75000"
2.contributor_address_street_2 = "MC: 2250"
2.contributor_address_city = "Detroit"
2.contributor_address_state = "MI"
2.contributor_address_zip_code = "48275"
2.election_code = "P2010"
2.contribution_date = 14645d
2.contribution_amount = 2000
2.contribution_aggregate = 2000
2.donor_committee_fec_id = "C00007948"
2.donor_committee_name = "Weyerhauser Company Political Action Committee"
2.donor_candidate_name_first_name = ""
2.donor_candidate_name_last_name = ""
2.memo = false
3.form_type = "SA15"
3.filer_committee_id = "C00213512"
3.transaction_id = "C2946442"
3.contributor_entity_type = "CCM"
3.contributor_organization_name = "Massa for Congress"
3.contributor_name_first_name = ""
3.contributor_name_last_name = ""
3.contributor_address_street_1 = "60 East Market Street, Suite 244"
3.contributor_address_city = "Corning"
3.contributor_address_state = "NY"
3.contributor_address_zip_code = "14830"
3.election_code = "G2010"
3.contribution_date = 14686d
3.contribution_amount = 2000
3.contribution_aggregate = 2000
3.donor_committee_fec_id = "C00411306"
3.donor_committee_name = "Massa for Congress"
3.donor_candidate_fec_id = "H6NY29168"
3.donor_candidate_name_first_name = "Eric"
3.donor_candidate_name_last_name = "Massa"
3.donor_candidate_office = "H"
3.donor_candidate_state = "NY"
3.donor_candidate_district = "29"
3.memo = false
3.memo_text = "Refund"
