crates/fec-parser/tests/snapshots/columnar__schedule_a_v8_5.snap
---
source: crates/fec-parser/tests/columnar.rs
expression: table
---
0.form_type = "SA11AI"
0.filer_committee_id = "C00727529"
0.transaction_id = "19148100"
0.back_reference_transaction_id = "19148100E"
0.back_reference_schedule_name = "SA11AI"
0.contributor_entity_type = "IND"
0.contributor_name_first_name = "Kali"
0.contributor_name_last_name = "Rasala"
0.contributor_name_middle_name = "Harris"
0.contributor_address_street_1 = "489 Eastwood Ln"
0.contributor_address_city = "Chesterton"
0.contributor_address_state = "IN"
0.contributor_address_zip_code = "463040205"
0.election_code = "P2026"
0.contribution_date = 20283d
0.contribution_amount = 25
0.contribution_aggregate = 275
0.contributor_employer = "Self-Employed"
0.contributor_occupation = "Actresss"
0.donor_candidate_name_first_name = ""
0.donor_candidate_name_last_name = ""
0.memo = false
0.memo_text = "* Earmarked Contribution: See Below"
1.form_type = "SA11B"
1.filer_committee_id = "C00727529"
1.transaction_id = "19334030"
1.contributor_entity_type = "PTY"
1.contributor_organization_name = "DCCC"
1.contributor_name_first_name = ""
1.contributor_name_last_name = ""
1.contributor_address_street_1 = "430 S Capitol St SE"
1.contributor_address_street_2 = "Fl 2"
1.contributor_address_city = "Washington"
1.contributor_address_state = "DC"
1.contributor_address_zip_code = "200034024"
1.election_code = "P2026"
1.contribution_date = 20347d
1.contribution_amount = 37.68
1.contribution_aggregate = 1562.66
1.donor_committee_fec_id = "C00000935"
1.donor_committee_name = "DCCC"
1.donor_candidate_name_first_name = ""
1.donor_candidate_name_last_name = ""
1.memo = false
1.memo_text = "* In-Kind: Catering & Facility Rental"
2.form_type = "SA11C"
2.filer_committee_id = "C00727529"
2.transaction_id = "19174210"
2.back_reference_transaction_id = "19174210E"
2.back_reference_schedule_name = "SA11C"
2.contributor_entity_type = "PAC"
2.contributor_organization_name = "Silicorn Valley PAC"
2.contributor_name_first_name = ""
2.contributor_name_last_name = ""
2.contributor_address_street_1 = "600 Pennsylvania Ave SE"
2.contributor_address_street_2 = "Unit 15180"
2.contributor_address_city = "Washington"
2.contributor_address_state = "DC"
2.contributor_address_zip_code = "200037508"
2.election_code = "P2026"
2.contribution_date = 20271d
2.contribution_amount = 2000
2.contribution_aggregate = 2000
2.donor_committee_fec_id = "C00840462"
2.donor_committee_name = "Silicorn Valley PAC"
2.donor_candidate_name_first_name = ""
2.donor_candidate_name_last_name = ""
2.memo = false
2.memo_text = "* Earmarked Contribution: See Below"
3.form_type = "SA12"
3.filer_committee_id = "C00727529"
3.transaction_id = "19333180"
3.contributor_entity_type = "COM"
3.contributor_organization_name = "Jeffries Battleground Protection Fund"
3.contributor_name_first_name = ""
3.contributor_name_last_name = ""
3.contributor_address_street_1 = "430 S Capitol St SE"
3.contributor_address_street_2 = "Fl 2"
3.contributor_address_city = "Washington"
3.contributor_address_state = "DC"
3.contributor_address_zip_code = "200034024"
3.contribution_date = 20361d
3.contribution_amount = 9229
3.contribution_aggregate = 9229
3.donor_committee_fec_id = "C00916429"
3.donor_committee_name = "Jeffries Battleground Protection Fund"
3.donor_candidate_name_first_name = ""
3.donor_candidate_name_last_name = ""
3.memo = false
3.memo_text = "Joint Fundraising Transfer"
